syntax = "proto3";
package banking;

option go_package = "/banking";

message Application {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string status = 4;
  string job_id = 5;
}